--- a/ITCC.VkPlayer/App.config
+++ b/ITCC.VkPlayer/App.config
@@ -3,4 +3,20 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
+
+  <appSettings>
+    <!-- Level for file and window. Values are: None, Critical, Error, Warning, Debug, Trace -->
+    <add key="LogLevel" value="Trace" />
+    <!-- Flags are: File, Window, Message -->
+    <add key="LoggerMode" value="File, Window, Message" />
+    <!-- Loglevel for messageboxes. SHOULD be <= Info -->
+    <add key="MessageLevel" value="Warning" />
+    <!-- Logscopes (semicolon-separated) not to be shown anywhere -->
+    <add key="BannedLoggerScopes" value="NAVIGATION" />
+    <!-- File buffering period in milliseconds -->
+    <add key="LogSavingPeriod" value="10000" />
+    <!-- Maximum number of entries to be displayed in log window -->
+    <add key="MaxWindowEntries" value="1000" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
 </configuration>
