--- a/ITCC.VkPlayer/App.config
+++ b/ITCC.VkPlayer/App.config
@@ -5,6 +5,12 @@
     </startup>
 
   <appSettings>
+    <add key="AppId" value="5141486"/>
+    <!-- Username to be shown by default -->
+    <add key="Username" value="yobalawson@outlook.com" />
+    <!-- Password to be used by default -->
+    <add key="Password" value="" />
+    
     <!-- Level for file and window. Values are: None, Critical, Error, Warning, Debug, Trace -->
     <add key="LogLevel" value="Trace" />
     <!-- Flags are: File, Window, Message -->
