All basic things done

--- a/ITCC.VkPlayer/App.config
+++ b/ITCC.VkPlayer/App.config
@@ -23,6 +23,13 @@
     <add key="LogSavingPeriod" value="10000" />
     <!-- Maximum number of entries to be displayed in log window -->
     <add key="MaxWindowEntries" value="1000" />
+
+    <!-- Where to store downloadeed music -->
+    <add key="MusicCacheFolder" value="Cache"/>
+    <!-- Should we keep cache forever? -->
+    <add key="KeepCache" value="true"/>
+
+
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
 </configuration>
