--- a/ITCC.VkPlayer/ITCC.VkPlayer.csproj
+++ b/ITCC.VkPlayer/ITCC.VkPlayer.csproj
@@ -36,6 +36,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
@@ -47,6 +55,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="VkNet, Version=1.21.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\VkNet.1.22.2\lib\net40\VkNet.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -178,10 +190,6 @@
     <ProjectReference Include="..\ITCC.Library\ITCC.UI\ITCC.UI.csproj">
       <Project>{07D36841-8876-437C-B7A4-CBF1012513EB}</Project>
       <Name>ITCC.UI</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\vk\VkNet\VkNet.csproj">
-      <Project>{9cb320ee-5f9b-4df3-9897-c3d20c296de7}</Project>
-      <Name>VkNet</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
