--- a/ITCC.VkPlayer/packages.config
+++ b/ITCC.VkPlayer/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.9" targetFramework="net46" />
+  <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
+  <package id="VkNet" version="1.22.2" targetFramework="net46" developmentDependency="true" />
 </packages>
